Fix dark mode for resume

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -104,14 +104,15 @@ article time {
     color: #fff;
     padding: 0.5rem 1rem;
     border-radius: 0.375rem;
+    font-size: 1.25rem;
     font-weight: 500;
     display: inline-block;
 }
 
 .prose .button:hover {
-    background: #fafafa;
+    background: #000;
+    color: #fff;
     transition: background 0.2s, color 0.2s;
-    color: #222;
     display: inline-block;
 }
 
